krkn-ai-188-reproduction/real-cluster-runs/20260512-164406-kind-with-monitoring/cluster/services-full.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-12T07:16:37Z"
    labels:
      component: apiserver
      provider: kubernetes
    name: kubernetes
    namespace: default
    resourceVersion: "205"
    uid: 22481f63-169c-4516-87b6-c70f784b7373
  spec:
    clusterIP: 10.96.0.1
    clusterIPs:
    - 10.96.0.1
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 6443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx","app.kubernetes.io/version":"1.12.1"},"name":"ingress-nginx-controller","namespace":"ingress-nginx"},"spec":{"ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"appProtocol":"http","name":"http","port":80,"protocol":"TCP","targetPor [...]
    creationTimestamp: "2026-05-12T07:16:48Z"
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/version: 1.12.1
    name: ingress-nginx-controller
    namespace: ingress-nginx
    resourceVersion: "496"
    uid: 5863c8a1-a570-4a72-aa62-883c9efc6f54
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.235.5
    clusterIPs:
    - 10.96.235.5
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - appProtocol: http
      name: http
      nodePort: 32622
      port: 80
      protocol: TCP
      targetPort: http
    - appProtocol: https
      name: https
      nodePort: 31580
      port: 443
      protocol: TCP
      targetPort: https
    selector:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx","app.kubernetes.io/version":"1.12.1"},"name":"ingress-nginx-controller-admission","namespace":"ingress-nginx"},"spec":{"ports":[{"appProtocol":"https","name":"https-webhook","port":443,"targetPort":"webhook"}],"selector":{"app.kubernetes.io/com [...]
    creationTimestamp: "2026-05-12T07:16:48Z"
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/version: 1.12.1
    name: ingress-nginx-controller-admission
    namespace: ingress-nginx
    resourceVersion: "500"
    uid: 7e48a8a5-15fd-47c1-8139-8af8f52b6193
  spec:
    clusterIP: 10.96.237.57
    clusterIPs:
    - 10.96.237.57
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - appProtocol: https
      name: https-webhook
      port: 443
      protocol: TCP
      targetPort: webhook
    selector:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"web","role":"external"},"name":"web-lb","namespace":"krkn-ps-fixture"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"web"},"type":"LoadBalancer"}}
    creationTimestamp: "2026-05-12T07:18:06Z"
    labels:
      app: web
      role: external
    name: web-lb
    namespace: krkn-ps-fixture
    resourceVersion: "805"
    uid: ed0f1435-39cc-43f9-8aa4-2a1f5dc1a964
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.243.148
    clusterIPs:
    - 10.96.243.148
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - nodePort: 30892
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: web
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"web"},"name":"web-svc","namespace":"krkn-ps-fixture"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"web"},"type":"ClusterIP"}}
    creationTimestamp: "2026-05-12T07:18:06Z"
    labels:
      app: web
    name: web-svc
    namespace: krkn-ps-fixture
    resourceVersion: "794"
    uid: b0d72b74-9a60-41d2-886e-8966ec426095
  spec:
    clusterIP: 10.96.143.163
    clusterIPs:
    - 10.96.143.163
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: web
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app: kube-prometheus-stack-coredns
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 85.0.1
      chart: kube-prometheus-stack-85.0.1
      heritage: Helm
      jobLabel: coredns
      release: kps
    name: kps-kube-prometheus-stack-coredns
    namespace: kube-system
    resourceVersion: "3984"
    uid: 9a6d3d12-cf7f-4448-af9a-aeafe88063e2
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-metrics
      port: 9153
      protocol: TCP
      targetPort: 9153
    selector:
      k8s-app: kube-dns
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app: kube-prometheus-stack-kube-controller-manager
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 85.0.1
      chart: kube-prometheus-stack-85.0.1
      heritage: Helm
      jobLabel: kube-controller-manager
      release: kps
    name: kps-kube-prometheus-stack-kube-controller-manager
    namespace: kube-system
    resourceVersion: "3974"
    uid: 1af5a439-ef01-4ccd-8ac9-1f6076d3a485
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-metrics
      port: 10257
      protocol: TCP
      targetPort: 10257
    selector:
      component: kube-controller-manager
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app: kube-prometheus-stack-kube-etcd
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 85.0.1
      chart: kube-prometheus-stack-85.0.1
      heritage: Helm
      jobLabel: kube-etcd
      release: kps
    name: kps-kube-prometheus-stack-kube-etcd
    namespace: kube-system
    resourceVersion: "3983"
    uid: 53ecd548-c0a6-4eeb-8c57-e0adab3a000a
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-metrics
      port: 2381
      protocol: TCP
      targetPort: 2381
    selector:
      component: etcd
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app: kube-prometheus-stack-kube-proxy
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 85.0.1
      chart: kube-prometheus-stack-85.0.1
      heritage: Helm
      jobLabel: kube-proxy
      release: kps
    name: kps-kube-prometheus-stack-kube-proxy
    namespace: kube-system
    resourceVersion: "3975"
    uid: e6b9ea7a-4494-47ee-a2a1-0ef763d3c9d6
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-metrics
      port: 10249
      protocol: TCP
      targetPort: 10249
    selector:
      k8s-app: kube-proxy
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app: kube-prometheus-stack-kube-scheduler
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 85.0.1
      chart: kube-prometheus-stack-85.0.1
      heritage: Helm
      jobLabel: kube-scheduler
      release: kps
    name: kps-kube-prometheus-stack-kube-scheduler
    namespace: kube-system
    resourceVersion: "3976"
    uid: eba0ddfa-9133-48d9-adee-8d57c69bbbea
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-metrics
      port: 10259
      protocol: TCP
      targetPort: 10259
    selector:
      component: kube-scheduler
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-12T10:58:42Z"
    labels:
      app.kubernetes.io/managed-by: prometheus-operator
      app.kubernetes.io/name: kubelet
      k8s-app: kubelet
    name: kps-kube-prometheus-stack-kubelet
    namespace: kube-system
    resourceVersion: "4307"
    uid: be99b4a9-fcbc-497a-b303-c5c1c6df0870
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    - IPv6
    ipFamilyPolicy: RequireDualStack
    ports:
    - name: https-metrics
      port: 10250
      protocol: TCP
      targetPort: 10250
    - name: cadvisor
      port: 4194
      protocol: TCP
      targetPort: 4194
    - name: http-metrics
      port: 10255
      protocol: TCP
      targetPort: 10255
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/port: "9153"
      prometheus.io/scrape: "true"
    creationTimestamp: "2026-05-12T07:16:38Z"
    labels:
      k8s-app: kube-dns
      kubernetes.io/cluster-service: "true"
      kubernetes.io/name: CoreDNS
    name: kube-dns
    namespace: kube-system
    resourceVersion: "240"
    uid: d54304e4-029a-493e-aa80-0f52def55fd3
  spec:
    clusterIP: 10.96.0.10
    clusterIPs:
    - 10.96.0.10
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: metrics
      port: 9153
      protocol: TCP
      targetPort: 9153
    selector:
      k8s-app: kube-dns
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app: kube-prometheus-stack-operator
      app.kubernetes.io/component: prometheus-operator
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 85.0.1
      chart: kube-prometheus-stack-85.0.1
      heritage: Helm
      release: kps
    name: kps-kube-prometheus-stack-operator
    namespace: monitoring
    resourceVersion: "4001"
    uid: 78d4d3b1-b5a8-470a-8f33-458408f5a544
  spec:
    clusterIP: 10.96.204.68
    clusterIPs:
    - 10.96.204.68
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    selector:
      app: kube-prometheus-stack-operator
      release: kps
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app: kube-prometheus-stack-prometheus
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 85.0.1
      chart: kube-prometheus-stack-85.0.1
      heritage: Helm
      release: kps
      self-monitor: "true"
    name: kps-kube-prometheus-stack-prometheus
    namespace: monitoring
    resourceVersion: "3988"
    uid: ddab5ad4-6b44-4eae-ad4d-b64b58383e85
  spec:
    clusterIP: 10.96.191.114
    clusterIPs:
    - 10.96.191.114
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-web
      port: 9090
      protocol: TCP
      targetPort: 9090
    - appProtocol: http
      name: reloader-web
      port: 8080
      protocol: TCP
      targetPort: reloader-web
    selector:
      app.kubernetes.io/name: prometheus
      operator.prometheus.io/name: kps-kube-prometheus-stack-prometheus
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app.kubernetes.io/component: metrics
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: kube-state-metrics
      app.kubernetes.io/version: 2.18.0
      helm.sh/chart: kube-state-metrics-7.3.0
      release: kps
    name: kps-kube-state-metrics
    namespace: monitoring
    resourceVersion: "3997"
    uid: 1497fd38-5f1a-4965-a255-f0d31442794d
  spec:
    clusterIP: 10.96.38.27
    clusterIPs:
    - 10.96.38.27
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    selector:
      app.kubernetes.io/instance: kps
      app.kubernetes.io/name: kube-state-metrics
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: kps
      meta.helm.sh/release-namespace: monitoring
      prometheus.io/scrape: "true"
    creationTimestamp: "2026-05-12T10:57:10Z"
    labels:
      app.kubernetes.io/component: metrics
      app.kubernetes.io/instance: kps
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: prometheus-node-exporter
      app.kubernetes.io/part-of: prometheus-node-exporter
      app.kubernetes.io/version: 1.11.1
      helm.sh/chart: prometheus-node-exporter-4.55.0
      jobLabel: node-exporter
      release: kps
    name: kps-prometheus-node-exporter
    namespace: monitoring
    resourceVersion: "3977"
    uid: 5f79963a-5d3f-4223-ab67-f52923981e87
  spec:
    clusterIP: 10.96.124.222
    clusterIPs:
    - 10.96.124.222
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
    selector:
      app.kubernetes.io/instance: kps
      app.kubernetes.io/name: prometheus-node-exporter
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-12T10:58:42Z"
    labels:
      app.kubernetes.io/managed-by: prometheus-operator
      managed-by: prometheus-operator
      operated-prometheus: "true"
    name: prometheus-operated
    namespace: monitoring
    ownerReferences:
    - apiVersion: monitoring.coreos.com/v1
      kind: Prometheus
      name: kps-kube-prometheus-stack-prometheus
      uid: 328b5b72-8f95-4eab-8bee-95e57f1406af
    resourceVersion: "4316"
    uid: 547379c7-3dd1-4474-968c-4b3eae5deb46
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-web
      port: 9090
      protocol: TCP
      targetPort: http-web
    selector:
      app.kubernetes.io/name: prometheus
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
